2003-08-03  Jason Eckhardt  <jle@rice.edu>

	* gas/i860/*.d: Prefix name with "i860".

2003-08-03  Jason Eckhardt  <jle@rice.edu>

	* gas/i860/dual01.{s,d}: New files.
	* gas/i860/dual02-err.{s,l}: New files.
	* gas/i860/dual03.{s,d}: New files.
	* gas/i860/i860.exp: Execute the above new tests.
	* gas/i860/README.i860: Update.

2003-08-02  Alan Modra  <amodra@bigpond.net.au>

	* gas/d10v/address-001.d: Adjust for objdump -d change.
	* gas/d10v/control-001.d: Likewise.
	* gas/d10v/error-001.d: Likewise.
	* gas/d10v/immediate-001.d: Likewise.
	* gas/d10v/immediate-002.d: Likewise.
	* gas/d10v/immediate-003.d: Likewise.
	* gas/d10v/immediate-006.d: Likewise.
	* gas/d10v/immediate-007.d: Likewise.
	* gas/d10v/instruction_packing-001.d: Likewise.
	* gas/d10v/instruction_packing-002.d: Likewise.
	* gas/d10v/instruction_packing-003.d: Likewise.
	* gas/d10v/instruction_packing-004.d: Likewise.
	* gas/d10v/instruction_packing-006.d: Likewise.
	* gas/d10v/instruction_packing-007.d: Likewise.
	* gas/d10v/instruction_packing-008.d: Likewise.
	* gas/d10v/instruction_packing-009.d: Likewise.
	* gas/d10v/instruction_packing-010.d: Likewise.
	* gas/d10v/instruction_packing.d: Likewise.
	* gas/d10v/label-001.d: Likewise.
	* gas/d10v/warning-014.d: Likewise.
	* gas/m88k/init.d: Likewise.

2003-08-01  Jason Eckhardt  <jle@rice.edu>

	* gas/i860/README.i860: New file.

2003-07-29  Nick Clifton  <nickc@redhat.com>

	* gas/sparc/unalign.d: Remove empty .text disassembly line.

2003-07-28  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/elf/elf.exp: Add section3 for note section.

	* gas/elf/section3.d: New file.
	* gas/elf/section3.s: Likewise.

2003-07-26  Alan Modra  <amodra@bigpond.net.au>

	* gas/ppc/altivec.d: Update.
	* gas/ppc/altivec_xcoff.d: Update.
	* gas/ppc/altivec_xcoff64.d: Update.
	* gas/ppc/booke.d: Update.
	* gas/ppc/booke_xcoff.d: Update.
	* gas/ppc/booke_xcoff64.d: Update.
	* gas/ppc/e500.d: Update.

2003-07-23  Stephane Carrez  <stcarrez@nerim.fr>
