@@ -1,0 +1,5 @@
+.*: Assembler messages:
+.*:8: Error: Directive .atmp available only with -mintel-syntax option
+.*:8: Warning: rest of line ignored; first ignored character is `r'
+.*:10: Error: Directive .dual available only with -mintel-syntax option
+.*:13: Error: Directive .enddual available only with -mintel-syntax option
