@@ -1,3 +1,10 @@
+2003-08-05  Jason Eckhardt  <jle@rice.edu>
+
+	* gas/i860/dir-intel01.{s,d}: New files.
+	* gas/i860/dir-intel02.{s,d}: New files.
+	* gas/i860/dir-intel03-err.{s,l}: New files.
+	* gas/i860/i860.exp: Execute the above new tests.
+
 2003-08-03  Jason Eckhardt  <jle@rice.edu>
 
 	* gas/i860/*.d: Prefix name with "i860".
